--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -20,8 +20,12 @@ services:
       - "8000:80"
 
   basket.api:
+    container_name: basket.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"
+    depends_on:
+      - basketdb
     ports:
-      - "80"
+      - "8001:80"
 
